# botcon

./: ChangeLog  Makefile.am  Makefile.in  README  configure  configure.ac
autom4te.cache/: output.1  requests  traces.0  traces.1
src/: Makefile.am  Makefile.in  botcon.c  botcon.h  config.h.in  control.c  protocol.h  xmpp.c  xmpp.h
